Slider overflow and image fix
Fix overflow of slider width
Change image that allows the text to be visible

--- a/assets/style.css
+++ b/assets/style.css
@@ -14,8 +14,8 @@ body {
 
 /* slider  */
 .slider {
-  overflow: hidden;
-  width: 100vw;
+  overflow: none;
+  width: 100%;
   height: 100vh;
   position: relative;
 }
@@ -52,7 +52,7 @@ body {
 }
 
 .slider .slide:nth-child(5) {
-  background-image: url("./images/raoul-droog-yMSecCHsIBc-unsplash.jpg");
+  background-image: url("./images/paul-hanaoka-w2DsS-ZAP4U-unsplash.jpg");
   animation-delay: -26s;
 }
 
